# plex

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  sync.yml
docs/: self-remediation.md
examples/: docker-compose.upstream.yml  docker-compose.yml
examples/lxc/: 110-plex.conf  provision.sh
lxc/: plex.conf.example  provision.sh
scripts/: backup.sh  install.sh  restore.sh
specs/: plex.openapi.json
src/: lib.rs  lifecycle.rs  main.rs  remediation.rs  storage.rs  tools.rs
src/account/: client.rs  mod.rs  presence.rs
