[package]
name = "plex"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Plex Media Server with GPU hardware transcoding — orca lifecycle/diagnostics"

[package.metadata.orca]
category = "media"

[lib]
name = "plex"
path = "src/lib.rs"
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib. The plugin now ships as the `[[bin]]` below — a dynamic
# subprocess the loader spawns, not a dlopened cdylib.
crate-type = ["rlib"]

[[bin]]
name = "plex"
path = "src/main.rs"

# Plex media-server plugin. All upstream HTTP goes through the orca-owned
# `plugin_toolkit::http` seam — the plugin names no HTTP crate directly, so it
# carries no `reqwest`/progenitor runtime of its own. Datetime goes through
# `plugin_toolkit::time` (chrono confined to orca core). Only genuinely
# plugin-owned runtime deps live here.

[dependencies]
# The SOLE orca dependency. All macro-emitted paths (`#[orca_tool]`,
# `endpoint_resource!`, dispatch's `register_op!`) resolve through
# `::plugin_toolkit::*`, and every orca primitive the plugin source touches
# (serde / serde_json / schemars / clap / anyhow / thiserror / inventory / db /
# rusqlite / async-trait / dispatch / contract / derive / macro-runtime / http /
# time / notifications) is re-exported by the toolkit + its prelude.
#
# The committed `[patch]` in `.cargo/config.toml` overrides this to the local
# in-tree toolkit for development; the git branch is what an external checkout
# without the orca repo resolves against.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# serde / serde_json / thiserror: the toolkit's re-exported derives (`Serialize`,
# `Deserialize`, `Error`) expand to bare `::serde` / `::thiserror` crate-root
# paths, so these must be nameable direct deps. They are lightweight, unlike the
# HTTP/codegen stack — which the plugin no longer carries.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"

# Async runtime: lifecycle/storage drive `tokio::process::Command` for
# install/update/backup/restore/restart, so the plugin owns its process-exec dep.
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "process"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
